src/hermes_dart.h

struct HermesABIRuntime;
struct HermesABIManagedPointer;
struct HermesABIManagedPointerVTable {
  void (*invalidate)(struct HermesABIManagedPointer *self);
};
struct HermesABIManagedPointer {
  const struct HermesABIManagedPointerVTable *vtable;
};
enum HermesABIErrorCode {
  HermesABIErrorCodeNativeException,
  HermesABIErrorCodeJSError,
};
struct HermesABIVoidOrError {
  uintptr_t void_or_error;
};
struct HermesABIUint8PtrOrError {
  bool is_error;
  union {
    uint8_t *val;
    uint16_t error;
  } data;
};
struct HermesABISizeTOrError {
  bool is_error;
  union {
    size_t val;
    uint16_t error;
  } data;
};
struct HermesABIPropNameIDListPtrOrError {
  uintptr_t ptr_or_error;
};
enum HermesABIValueKind {
  HermesABIValueKindUndefined = 0,
  HermesABIValueKindNull = 1,
  HermesABIValueKindBoolean = 2,
  HermesABIValueKindError = 3,
  HermesABIValueKindNumber = 4,
  HermesABIValueKindSymbol = 5 | HERMES_ABI_POINTER_MASK,
  HermesABIValueKindBigInt = 6 | HERMES_ABI_POINTER_MASK,
  HermesABIValueKindString = 7 | HERMES_ABI_POINTER_MASK,
  HermesABIValueKindObject = 9 | HERMES_ABI_POINTER_MASK,
};
struct HermesABIValue {
  enum HermesABIValueKind kind;
  union {
    bool boolean;
    double number;
    struct HermesABIManagedPointer *pointer;
    enum HermesABIErrorCode error;
  } data;
};
struct HermesABIValueOrError {
  struct HermesABIValue value;
};
struct HermesABIPropNameIDList;
struct HermesABIPropNameIDListVTable {
  void (*release)(struct HermesABIPropNameIDList *);
};
struct HermesABIPropNameIDList {
  const struct HermesABIPropNameIDListVTable *vtable;
  const struct HermesABIPropNameID *props;
  size_t size;
};
struct HermesABIRuntimeConfig {
  bool enable_eval;
  bool es6_proxy;
  bool enable_generator;
  bool enable_async_generators;
  bool es6_block_scoping;
  bool intl;
  bool microtask_queue;
  int32_t compilation_mode;
  uint32_t bytecode_warmup_percent;
  bool optimized_eval;
  bool enable_hermes_internal;
  bool enable_hermes_internal_test_methods;
  bool randomize_memory_layout;
};
struct HermesABIPreparedJavaScript;
struct HermesABIPreparedJavaScriptOrError {
  uintptr_t ptr_or_error;
};
struct HermesABIStringData {
  bool is_ascii;
  const void *data;
  size_t length;
};