lib/hermes_dart.g.dart


final class HermesABIObject extends ffi.Struct {
  external ffi.Pointer<HermesABIManagedPointer> pointer;

  static ffi.Pointer<HermesABIObject> $allocate(
    ffi.Allocator $allocator, {
    required ffi.Pointer<HermesABIManagedPointer> pointer,
  }) => $allocator<HermesABIObject>()..ref.pointer = pointer;
}

final class HermesABIObjectOrError extends ffi.Struct {
  @ffi.UintPtr()
  external int ptr_or_error;

  static ffi.Pointer<HermesABIObjectOrError> $allocate(
    ffi.Allocator $allocator, {
    required int ptr_or_error,
  }) => $allocator<HermesABIObjectOrError>()..ref.ptr_or_error = ptr_or_error;
}

final class HermesABIPreparedJavaScript extends ffi.Opaque {}

final class HermesABIPreparedJavaScriptOrError extends ffi.Struct {
  @ffi.UintPtr()
  external int ptr_or_error;

  static ffi.Pointer<HermesABIPreparedJavaScriptOrError> $allocate(
    ffi.Allocator $allocator, {
    required int ptr_or_error,
  }) =>
      $allocator<HermesABIPreparedJavaScriptOrError>()
        ..ref.ptr_or_error = ptr_or_error;
}

final class HermesABIPropNameID extends ffi.Struct {
  external ffi.Pointer<HermesABIManagedPointer> pointer;

  static ffi.Pointer<HermesABIPropNameID> $allocate(
    ffi.Allocator $allocator, {
    required ffi.Pointer<HermesABIManagedPointer> pointer,
  }) => $allocator<HermesABIPropNameID>()..ref.pointer = pointer;
}

final class HermesABIPropNameIDList extends ffi.Opaque {}

final class HermesABIPropNameIDListPtrOrError extends ffi.Struct {
  @ffi.UintPtr()
  external int ptr_or_error;

  static ffi.Pointer<HermesABIPropNameIDListPtrOrError> $allocate(
    ffi.Allocator $allocator, {
    required int ptr_or_error,
  }) =>
      $allocator<HermesABIPropNameIDListPtrOrError>()
        ..ref.ptr_or_error = ptr_or_error;
}

final class HermesABIPropNameIDOrError extends ffi.Struct {
  @ffi.UintPtr()
  external int ptr_or_error;

  static ffi.Pointer<HermesABIPropNameIDOrError> $allocate(
    ffi.Allocator $allocator, {
    required int ptr_or_error,
  }) =>
      $allocator<HermesABIPropNameIDOrError>()..ref.ptr_or_error = ptr_or_error;
}

final class HermesABIRuntime extends ffi.Opaque {}

final class HermesABIRuntimeConfig extends ffi.Struct {
  @ffi.Bool()
  external bool enable_eval;

  @ffi.Bool()
  external bool es6_proxy;

  @ffi.Bool()
  external bool enable_generator;

  @ffi.Bool()
  external bool enable_async_generators;

  @ffi.Bool()
  external bool es6_block_scoping;

  @ffi.Bool()
  external bool intl;

  @ffi.Bool()
  external bool microtask_queue;

  @ffi.Int32()
  external int compilation_mode;

  @ffi.Uint32()
  external int bytecode_warmup_percent;

  @ffi.Bool()
  external bool optimized_eval;

  @ffi.Bool()
  external bool enable_hermes_internal;

  @ffi.Bool()
  external bool enable_hermes_internal_test_methods;

  @ffi.Bool()
  external bool randomize_memory_layout;

  static ffi.Pointer<HermesABIRuntimeConfig> $allocate(
    ffi.Allocator $allocator, {
    required bool enable_eval,
    required bool es6_proxy,
    required bool enable_generator,
    required bool enable_async_generators,
    required bool es6_block_scoping,
    required bool intl,
    required bool microtask_queue,
    required int compilation_mode,
    required int bytecode_warmup_percent,
    required bool optimized_eval,
    required bool enable_hermes_internal,
    required bool enable_hermes_internal_test_methods,
    required bool randomize_memory_layout,
  }) => $allocator<HermesABIRuntimeConfig>()
    ..ref.enable_eval = enable_eval
    ..ref.es6_proxy = es6_proxy
    ..ref.enable_generator = enable_generator
    ..ref.enable_async_generators = enable_async_generators
    ..ref.es6_block_scoping = es6_block_scoping
    ..ref.intl = intl
    ..ref.microtask_queue = microtask_queue
    ..ref.compilation_mode = compilation_mode
    ..ref.bytecode_warmup_percent = bytecode_warmup_percent
    ..ref.optimized_eval = optimized_eval
    ..ref.enable_hermes_internal = enable_hermes_internal
    ..ref.enable_hermes_internal_test_methods =
        enable_hermes_internal_test_methods
    ..ref.randomize_memory_layout = randomize_memory_layout;
}

final class HermesABISizeTOrError extends ffi.Struct {
  @ffi.Bool()
  external bool is_error;

  external UnnamedUnion$2 data;
}

final class HermesABIString extends ffi.Struct {
  external ffi.Pointer<HermesABIManagedPointer> pointer;

  static ffi.Pointer<HermesABIString> $allocate(
    ffi.Allocator $allocator, {
    required ffi.Pointer<HermesABIManagedPointer> pointer,
  }) => $allocator<HermesABIString>()..ref.pointer = pointer;
}

final class HermesABIStringData extends ffi.Struct {
  @ffi.Bool()
  external bool is_ascii;

  external ffi.Pointer<ffi.Void> data;

  @ffi.Size()
  external int length;

  static ffi.Pointer<HermesABIStringData> $allocate(
    ffi.Allocator $allocator, {
    required bool is_ascii,
    required ffi.Pointer<ffi.Void> data,
    required int length,
  }) => $allocator<HermesABIStringData>()
    ..ref.is_ascii = is_ascii
    ..ref.data = data
    ..ref.length = length;
}

final class HermesABIStringOrError extends ffi.Struct {
  @ffi.UintPtr()
  external int ptr_or_error;

  static ffi.Pointer<HermesABIStringOrError> $allocate(
    ffi.Allocator $allocator, {
    required int ptr_or_error,
  }) => $allocator<HermesABIStringOrError>()..ref.ptr_or_error = ptr_or_error;
}

final class HermesABISymbol extends ffi.Struct {
  external ffi.Pointer<HermesABIManagedPointer> pointer;

  static ffi.Pointer<HermesABISymbol> $allocate(
    ffi.Allocator $allocator, {
    required ffi.Pointer<HermesABIManagedPointer> pointer,
  }) => $allocator<HermesABISymbol>()..ref.pointer = pointer;
}

final class HermesABIUint8PtrOrError extends ffi.Struct {
  @ffi.Bool()
  external bool is_error;

  external UnnamedUnion$1 data;
}

final class HermesABIValue extends ffi.Struct {
  @ffi.Int()
  external int kindAsInt;

  HermesABIValueKind get kind => HermesABIValueKind.fromValue(kindAsInt);
  set kind(HermesABIValueKind value) => kindAsInt = value.value;

  external UnnamedUnion data;
}

enum HermesABIValueKind {
  HermesABIValueKindUndefined(0),
  HermesABIValueKindNull(1),
  HermesABIValueKindBoolean(2),
  HermesABIValueKindError(3),
  HermesABIValueKindNumber(4),
  HermesABIValueKindSymbol(-2147483643),
  HermesABIValueKindBigInt(-2147483642),
  HermesABIValueKindString(-2147483641),
  HermesABIValueKindObject(-2147483639)
  ;

  final int value;
  const HermesABIValueKind(this.value);

  static HermesABIValueKind fromValue(int value) => switch (value) {
    0 => HermesABIValueKindUndefined,
    1 => HermesABIValueKindNull,
    2 => HermesABIValueKindBoolean,
    3 => HermesABIValueKindError,
    4 => HermesABIValueKindNumber,
    -2147483643 => HermesABIValueKindSymbol,
    -2147483642 => HermesABIValueKindBigInt,
    -2147483641 => HermesABIValueKindString,
    -2147483639 => HermesABIValueKindObject,
    _ => throw ArgumentError('Unknown value for HermesABIValueKind: $value'),
  };
}

final class HermesABIValueOrError extends ffi.Struct {
  external HermesABIValue value;
}

final class HermesABIVoidOrError extends ffi.Struct {
  @ffi.UintPtr()
  external int void_or_error;

  static ffi.Pointer<HermesABIVoidOrError> $allocate(
    ffi.Allocator $allocator, {
    required int void_or_error,
  }) => $allocator<HermesABIVoidOrError>()..ref.void_or_error = void_or_error;
}

final class HermesABIWeakObject extends ffi.Struct {
  external ffi.Pointer<HermesABIManagedPointer> pointer;

  static ffi.Pointer<HermesABIWeakObject> $allocate(
    ffi.Allocator $allocator, {
    required ffi.Pointer<HermesABIManagedPointer> pointer,
  }) => $allocator<HermesABIWeakObject>()..ref.pointer = pointer;
}

final class HermesABIWeakObjectOrError extends ffi.Struct {
  @ffi.UintPtr()
  external int ptr_or_error;

  static ffi.Pointer<HermesABIWeakObjectOrError> $allocate(
    ffi.Allocator $allocator, {
    required int ptr_or_error,
  }) =>
      $allocator<HermesABIWeakObjectOrError>()..ref.ptr_or_error = ptr_or_error;
}

final class UnnamedUnion extends ffi.Union {
  @ffi.Bool()
  external bool boolean;

  @ffi.Double()
  external double number;

  external ffi.Pointer<HermesABIManagedPointer> pointer;

  @ffi.UnsignedInt()
  external int errorAsInt;

  HermesABIErrorCode get error => HermesABIErrorCode.fromValue(errorAsInt);
  set error(HermesABIErrorCode value) => errorAsInt = value.value;
}

final class UnnamedUnion$1 extends ffi.Union {
  external ffi.Pointer<ffi.Uint8> val;

  @ffi.Uint16()
  external int error;
}

final class UnnamedUnion$2 extends ffi.Union {
  @ffi.Size()
  external int val;

  @ffi.Uint16()
  external int error;
}
